@@ -1,4 +1,5 @@
 Version 1.0.4 (not yet released):
+- Update gettext files to gettext-0.16.
 - Improved the configure check for the OpenSSL libraries. This fixes a build
   failure on Mac OS X. Reported for msmtp by Michael Williams, who also tested
   the fix. Thanks!
